# fixturebuilder_py

./: .landscape.yml  .travis.yml  ChangeLog  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test_fixturebuilder.py
fixturebuilder/: __init__.py  fixturebuilder.py  test_fixturebuilder.py
scripts/: build  pypiPublish  reportCoverage  test
snapshots/: snap_test_fixturebuilder.py
