[metadata]
author = Florian Plattner
author-email = me@florianplattner.de
maintainer = Florian Plattner
maintainer-email = me@florianplattner.de
name = fixturebuilder
summary = Build fixtures from a single source
description-file = README.rst
home-page = https://github.com/flowpl/fixturebuilder_py
license = MIT
classifier =
     Development Status :: 5 - Production/Stable
     Environment :: Other Environment
     Intended Audience :: Developers
     Intended Audience :: Information Technology
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.3
     Programming Language :: Python :: 3.4
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Topic :: Software Development :: Libraries :: Python Modules
 
keywords =
     testing
     fixture
     test data
 
[files]
packages=fixturebuilder

[bdist_wheel]
universal = 1
